--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ body, .app {
   bottom: 25px;
 }
 
-.open-search button Link {
+.open-search button{
   display: block;
   width: 50px;
   height: 50px;
